# job-scraper

./: .gitignore  .pre-commit-config.yaml  README.md  config.ini  main.py  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: linters.yml  pre-commit-config.yaml  publish-prod.yml  publish-test.yml  python-publish.yml  tests.yml  tests2.yml
docs/: CONTRIBUTING.md  LINTING.md
exfill/: config.ini  extractor.py
exfill/parsers/: linkedin_parser.py  parser_factory.py
exfill/scrapers/: linkedin_scraper.py  scraper_base.py  scraper_factory.py
parsers/: linkedin_parser.py
scrapers/: linkedin_scraper.py
src/exfill/: __init__.py  extractor.py
src/exfill/parsers/: factory.py  linkedin_parser.py  parser.py
src/exfill/scrapers/: factory.py  linkedin_scraper.py  scraper_linkedin.py
src/exfill/tests/: README.md  main_test.py  parser_factory_tests.py  parser_linkedin_export_props_tests.py  parser_linkedin_tests.py
src/exfill/tests/test_data/html/: jobid_3080721373_20220516_180204.html
src/grabby/: __init__.py  grabber.py
src/grabby/parsers/: linkedin_parser.py
src/grabby/scrapers/: linkedin_scraper.py
tests/: conftest.py  test_extractor.py  test_factories.py  test_linkedin_config_props.py  test_linkedin_export_props.py
tests/parser/: test_linkedin_config_props.py  test_linkedin_parser.py
tests/scraper/: test_linkedin_scraper.py
